Python/tests/unit_tests/donorimputation/output-sas/donorJ02_sas.txt
NOTE: PROCEDURE PRINTTO used (Total process time):
      real time           0.00 seconds
      cpu time            0.00 seconds
      

2099  proc donorimputation
2100     data=indata
2101     instatus=instat
2102     out=outdata
2103     outstatus=outstat
2104     donormap=map
2105     edits="Q1 + Q2 + Q3 + Q4 = total, Q1>=0;"
2106     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0;"
2107     mindonors=1
2108     pcentdonors=1
2109     n=3
2110     matchfieldstat
2111     eligdon=any
2112     ;
2113     id ident;
2114     mustmatch STAFF;
2115     dataexclvar toexcl;
2116  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = total, Q1>=0;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0;
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572448 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.

ERROR: Invalid EDITS..
ERROR: Edits parser: Looking for 'SemiColon' but found 'Unknown character' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 = TOTAL, Q1>=0;
                                 ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.18 seconds
      cpu time            0.01 seconds
      
2117  


2118  proc donorimputation
2119     data=indata
2120     instatus=instat
2121     out=outdata
2122     outstatus=outstat
2123     donormap=map
2124     edits="Q1 + Q2 + Q3 + Q4 = total: Q1>=0;"
2125     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0;"
2126     mindonors=1
2127     pcentdonors=1
2128     n=3
2129     matchfieldstat
2130     eligdon=any
2131     ;
2132     id ident;
2133     mustmatch STAFF;
2134     dataexclvar toexcl;
2135  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = total: Q1>=0;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0;
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572448 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.

ERROR: Invalid EDITS..
ERROR: Edits parser: Looking for 'SemiColon' but found 'Colon' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 = TOTAL: Q1>=0;
                                 ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.06 seconds
      cpu time            0.00 seconds
      
2136  


2137  proc donorimputation
2138     data=indata
2139     instatus=instat
2140     out=outdata
2141     outstatus=outstat
2142     donormap=map
2143     edits="Q1 + Q2 + Q3 + Q4 = total Q1>=0;"
2144     postedits="Q1 + Q2 + Q3 + Q4 - total <= 0;"
2145     mindonors=1
2146     pcentdonors=1
2147     n=3
2148     matchfieldstat
2149     eligdon=any
2150     ;
2151     id ident;
2152     mustmatch STAFF;
2153     dataexclvar toexcl;
2154  run;

NOTE: --- Banff System 2.08.002 developed by Statistics Canada ---
NOTE: PROCEDURE DONORIMPUTATION Version 2.06.002
NOTE: Created on Jan 19 2022 at 13:40:59
NOTE: Email: banff@statcan.gc.ca
NOTE: 

NOTE: DATA = WORK.INDATA
NOTE: INSTATUS = WORK.INSTAT
NOTE: OUT = WORK.OUTDATA
NOTE: OUTSTATUS = WORK.OUTSTAT
NOTE: DONORMAP = WORK.MAP
NOTE: EDITS = Q1 + Q2 + Q3 + Q4 = total Q1>=0;
NOTE: POSTEDITS = Q1 + Q2 + Q3 + Q4 - total <= 0;
NOTE: MINDONORS = 1
NOTE: PCENTDONORS = 1.00%
NOTE: N = 3
NOTE: NLIMIT not specified.
NOTE: MRL not specified.
NOTE: ELIGDON = ANY
NOTE: RANDOM not specified (random search of donors will not be performed)
NOTE: MATCHFIELDSTAT
NOTE: SEED = 1671572448 (value chosen by the system) 
NOTE: REJECTNEGATIVE (default)
NOTE: DISPLAYLEVEL = 0
NOTE: ID = ident
NOTE: DATAEXCLVAR = toexcl
NOTE: RANDNUMVAR not specified.
NOTE: MUSTMATCH = staff 
NOTE: BY not specified.

ERROR: Invalid EDITS..
ERROR: Edits parser: Looking for 'SemiColon' but found 'Variable' instead.
       
       Error at or before:
       Q1 + Q2 + Q3 + Q4 = TOTAL Q1>=0;
                                   ^
       
NOTE: The SAS System stopped processing this step because of errors.
WARNING: The data set WORK.OUTDATA may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTDATA was not replaced because this step was stopped.
WARNING: The data set WORK.OUTSTAT may be incomplete.  When this step was stopped there 
         were 0 observations and 0 variables.
WARNING: Data set WORK.OUTSTAT was not replaced because this step was stopped.
WARNING: The data set WORK.MAP may be incomplete.  When this step was stopped there were 
         0 observations and 0 variables.
WARNING: Data set WORK.MAP was not replaced because this step was stopped.
NOTE: PROCEDURE DONORIMPUTATION used (Total process time):
      real time           0.06 seconds
      cpu time            0.01 seconds
      


2155  proc printto;
2156  run;

